# llm-rule-explainer

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
aecd/: __init__.py  evaluation.py  generator.py  prompting.py  similarity.py  visualization.py
data/: Allrules.xlsx  baf_rulesets.txt
docs/: README.md
notebooks/: plot_distributions.ipynb  results.ipynb
rulescribe/: __init__.py  analysis.py  data_utils.py  evaluation.py  prompting.py
scripts/: create_sample.py  distribution_check.py  run_experiment.py
